[gd_scene load_steps=4 format=3 uid="uid://qfy74hv5ftrx"]

[ext_resource type="StyleBox" path="res://butaostyle.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://b28j4gnuryeua" path="res://assets/background.jpg" id="2"]
[ext_resource type="Script" path="res://scripts/configuracaodetempo.gd" id="3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -3.0
offset_right = 4.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(542.5, 964.5)
scale = Vector2(1.66923, 1.65657)
texture = ExtResource("2")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 76.0
offset_top = 853.0
offset_right = 278.0
offset_bottom = 950.0
scale = Vector2(2, 2)
theme_override_styles/normal = ExtResource("1")
theme_override_styles/hover = ExtResource("1")
theme_override_styles/pressed = ExtResource("1")
theme_override_styles/disabled = ExtResource("1")
theme_override_styles/focus = ExtResource("1")
icon_alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Button"]

[node name="Label" type="Label" parent="Button"]
layout_mode = 0
offset_left = 40.5
offset_top = 24.5
offset_right = 100.5
offset_bottom = 52.5
scale = Vector2(2, 2)
text = "Infinito"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 588.0
offset_top = 855.0
offset_right = 782.0
offset_bottom = 949.0
scale = Vector2(2, 2)
theme_override_styles/normal = ExtResource("1")
theme_override_styles/hover = ExtResource("1")
theme_override_styles/pressed = ExtResource("1")
theme_override_styles/disabled = ExtResource("1")
theme_override_styles/focus = ExtResource("1")

[node name="tempo" type="TouchScreenButton" parent="Button2"]

[node name="Label" type="Label" parent="Button2"]
layout_mode = 0
offset_left = 17.0
offset_top = 28.5
offset_right = 119.0
offset_bottom = 60.5
scale = Vector2(1.5, 1.5)
text = "Temporizado"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -13.0
offset_right = 3.0
offset_bottom = -13.0
color = Color(0.247059, 0.247059, 0.247059, 0.333333)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_top = 0.116
anchor_right = 0.14
anchor_bottom = 0.116
offset_left = 9.10001
offset_top = 64.308
offset_right = 209.1
offset_bottom = 87.308
scale = Vector2(4, 4)
text = "Escolha seu modo de jogo"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button2/tempo" to="." method="_on_tempo_pressed"]
